[package]
name = "lash"
version = "0.1.0"
authors = ["Frank Murphy <fmurphy@instructure.com>"]
edition = "2018"

[dependencies]
env_logger = "0.7.1"
futures = "0.3"
futures1 = { package = "futures", version = "0.1" }
log = "0.4"
rand = "0.5"
tokio = "0.1.22"
uuid = { version = "0.8", features = ["v4"] }

[features]
old_futures = []
